--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "sass": "^1.77.5",
     "stylelint": "^16.6.1",
     "stylelint-config-twbs-bootstrap": "^14.1.0",
-    "typescript": "^5.7.3"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
